--- a/signin-signup/src/login/login.css
+++ b/signin-signup/src/login/login.css
@@ -1,4 +1,4 @@
-addUser {
+.addUser {
   background-color: white;
   width: 25%;
   margin: 50px auto;
@@ -46,6 +46,5 @@ addUser {
   text-transform: uppercase;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
 }
-
 
 
