--- a/ency-front/src/index.css
+++ b/ency-front/src/index.css
@@ -1,21 +1,3 @@
-body {
-  margin: 4;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
   background-color: #282c34;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-footer {
-  background-color: rgb(2, 72, 96);
-  text-align: center;
-  align-self: center;
-  border-radius: 16px;
 }
