Sign up working

--- a/ency-front/src/components/css/SignUp.css
+++ b/ency-front/src/components/css/SignUp.css
@@ -9,3 +9,23 @@
     padding: 16px;
     align-content: center
 }
+
+.popup {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    z-index: 1000;
+}
+
+.popup.success {
+    border-color: green;
+}
+
+.popup.error {
+    border-color: red;
+}
